--- a/flower.css
+++ b/flower.css
@@ -22,6 +22,11 @@
     margin: auto;
 }
 
+section {
+    margin-top: 100px;
+
+}
+
 .flex {
     display: flex;
     gap: 10px;
@@ -121,6 +126,7 @@ img {
     margin-top: 100px;
     margin-bottom: 100px;
     background-color: rgba(39, 39, 39, 0.05);
+    padding: 45px 20px;
 }
 
 .delivery-card {
@@ -137,8 +143,8 @@ img {
 /* parcentege devide section design */
 
 .hot-deal-section {
-       background-color: rgba(229, 84, 115, 0.1);
-       padding: 100px 20px;
+    background-color: rgba(229, 84, 115, 0.1);
+    padding: 100px 20px;
 }
 
 .deal-information {
@@ -149,6 +155,20 @@ img {
 
 .off-color {
     color: #E55473;
+}
+
+/* instagram flower card section*/
+
+.flower-card-contaier {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    gap: 20px;
+    justify-items: center;
+
+}
+
+.singe-flower-card {
+    max-width: 350px;
 }
 
 /* mobile responsive */
@@ -177,7 +197,7 @@ img {
     }
 
     /* flower card */
-    .flower-card-container {
+    .flower-card-container, .flower-card-contaier{
 
         grid-template-columns: repeat(1, 1fr);
 
